--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -25,7 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -33,6 +33,9 @@
                     android:id="@+id/detail_text_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:typeface="serif"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.1"
                     android:layout_marginTop="3dp"
                     android:textColor="#000000"
                     android:textSize="18sp" />
@@ -41,7 +44,7 @@
                     android:id="@+id/detail_text_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp" />
+                    android:layout_marginTop="8dp" />
 
                 <TextView
                     android:id="@+id/detail_text_3"
