--- a/app/src/main/res/layout/planned_course_cardview.xml
+++ b/app/src/main/res/layout/planned_course_cardview.xml
@@ -50,10 +50,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:textColor="#ff000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#000000"
             android:textSize="16sp"
+            android:typeface="serif"
+            android:textStyle="bold"
+            android:letterSpacing="0.1"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
