--- a/app/src/main/res/layout/score_cardview.xml
+++ b/app/src/main/res/layout/score_cardview.xml
@@ -59,7 +59,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="4dp"
             android:textColor="#000000"
-            android:textSize="14sp"
+            android:textSize="16sp"
+            android:typeface="serif"
+            android:textStyle="bold"
+            android:letterSpacing="0.1"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -71,7 +74,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="4dp"
-            android:textSize="13sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/course_name" />
