--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">0dp</dimen>
 
+    <dimen name="config_margin_5dp">5dp</dimen>
+    <dimen name="config_margin_8dp">8dp</dimen>
+    <dimen name="config_margin_10dp">10dp</dimen>
+    <dimen name="config_margin_16dp">16dp</dimen>
+    <dimen name="config_margin_20dp">20dp</dimen>
+
 </resources>
