perf:更新部分链接 perf:将异变链接/key改为在线参数

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:text="@string/QQGroup" />
+                    android:id="@+id/qq_number" />
 
                 <View
                     android:layout_width="match_parent"
