--- a/app/src/main/res/layout/activity_set_term.xml
+++ b/app/src/main/res/layout/activity_set_term.xml
@@ -111,8 +111,44 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="20dp"
-                    android:entries="@array/spinnerterm" />
+                    android:entries="@array/spinnerTerm" />
+
+                <View
+                    android:id="@+id/show_addTerm_place"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"/>
+
+                <RelativeLayout
+                    android:id="@+id/show_addTerm"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="4dp">
+
+                        <CheckBox
+                            android:id="@+id/cb_addTerm"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/addTerm"
+                            android:textColor="@color/theme_black" />
+
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_help"
+                            android:onClick="showHelp"
+                            tools:ignore="ContentDescription,UsingOnClickInXml" />
+
+                    </LinearLayout>
+
+
+
+                </RelativeLayout>
 
                 <com.xuexiang.xui.widget.textview.label.LabelButtonView
                     style="@style/Button.Blue"
