--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="spinnerterm">
+    <string-array name="spinnerTerm">
         <item>第一学期</item>
         <item>第二学期</item>
         <item>小学期</item>
