feat:添加一个合作位

--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -697,7 +697,7 @@
                         </FrameLayout>
 
                         <FrameLayout
-                            android:visibility="invisible"
+                            android:id="@+id/more_ad"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
