chore: 清理部分代码，方便堆屎山

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,6 +123,7 @@
             android:layout_marginBottom="4dp"
             android:text="@string/auto_term"
             android:textColor="@color/theme_black"
+            android:visibility="gone"
             tools:ignore="RelativeOverlap" />
 
     </RelativeLayout>
