--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -391,6 +391,30 @@
                         android:baselineAligned="false">
 
                         <FrameLayout
+                            android:id="@+id/more_url_bkjwtest"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="1">
+
+                            <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:layout_gravity="top|center"
+                                android:layout_marginTop="1dp"
+                                android:src="@drawable/m_jiaowu"
+                                tools:ignore="ContentDescription" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom|center"
+                                android:text="@string/moreFun_url_bkjw_test"
+                                android:textSize="13sp" />
+
+                        </FrameLayout>
+
+                        <FrameLayout
                             android:id="@+id/more_url_bkjw"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -460,6 +484,14 @@
 
                         </FrameLayout>
 
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:layout_marginBottom="15dp"
+                        android:baselineAligned="false">
                         <FrameLayout
                             android:id="@+id/more_url_lijiang"
                             android:layout_width="0dp"
@@ -482,14 +514,6 @@
                                 android:textSize="13sp" />
 
                         </FrameLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:layout_marginBottom="15dp"
-                        android:baselineAligned="false">
 
                         <FrameLayout
                             android:id="@+id/more_url_graduation_project"
@@ -558,30 +582,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|center"
                                 android:text="@string/moreFun_url_more"
-                                android:textSize="13sp" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:visibility="invisible"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_gravity="top|center"
-                                android:layout_marginTop="0dp"
-                                android:src="@drawable/m_wei_chat"
-                                tools:ignore="ContentDescription" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom|center"
-                                android:text="@string/moreFun_wei_chat"
                                 android:textSize="13sp" />
 
                         </FrameLayout>
