--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -140,6 +140,41 @@
 
                         </FrameLayout>
 
+
+                        <FrameLayout
+                            android:id="@+id/more_test_scores_new"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="1">
+
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="top|center"
+                                android:layout_marginTop="2dp"
+                                android:src="@drawable/m_chengjihov"
+                                tools:ignore="ContentDescription" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom|center"
+                                android:text="@string/moreFun_test_scores_new"
+                                android:textSize="13sp" />
+
+                        </FrameLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="15dp"
+                        android:baselineAligned="false"
+                        android:orientation="horizontal">
+
                         <FrameLayout
                             android:id="@+id/more_lib_scores"
                             android:layout_width="0dp"
@@ -163,16 +198,6 @@
                                 android:textSize="13sp" />
 
                         </FrameLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="15dp"
-                        android:baselineAligned="false"
-                        android:orientation="horizontal">
 
                         <FrameLayout
                             android:id="@+id/more_resit_schedule"
@@ -244,14 +269,6 @@
 
                         </FrameLayout>
 
-                        <FrameLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            tools:ignore="UselessLeaf">
-
-                        </FrameLayout>
 
                     </LinearLayout>
 
