fix: 设置自动换行

--- a/app/src/main/res/layout/score_cardview_new.xml
+++ b/app/src/main/res/layout/score_cardview_new.xml
@@ -75,7 +75,7 @@
 
         <TextView
             android:id="@+id/ScoreFinal"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#AA000000"
             android:textSize="18sp"
@@ -87,10 +87,11 @@
 
         <TextView
             android:id="@+id/ScoreRemark"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
