fix: 让表格对齐

--- a/app/src/main/res/layout/activity_exam_score_new.xml
+++ b/app/src/main/res/layout/activity_exam_score_new.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:text="课程"
+            android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -45,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="成绩"
+            android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="备注"
+            android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
