--- a/app/src/main/res/layout/score_cardview_new.xml
+++ b/app/src/main/res/layout/score_cardview_new.xml
@@ -79,6 +79,7 @@
             android:layout_height="wrap_content"
             android:textColor="#AA000000"
             android:textSize="18sp"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -89,6 +90,7 @@
             android:id="@+id/ScoreRemark"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
