--- a/app/src/main/res/layout/activity_widget.xml
+++ b/app/src/main/res/layout/activity_widget.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
-        android:text="小部件透明度:"
+        android:text="小部件不透明度:"
         android:textColor="@color/app_black"
         android:textSize="16sp" />
 
